<resources>
    <string name="_true">True</string>
    <string name="no_consensus">No Consensus</string>
    <string name="_false">False</string>
    <string name="annotated">Annotated</string>
    <string name="junk">Junk</string>
    <string name="approve_records">Approve All</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="alert">Alert!</string>
    <string name="no_more_records">There are no more records to process for this work currently. Please start another work.</string>
    <string name="no_records">No More Records are available for selected category.</string>
    <string name="reject_alert">Reject Records</string>
    <string name="approve_all_records_message">Want to approve all remaining records?</string>
    <string name="reject_all_records_message">Want to reject all remaining records?</string>
    <string name="reject_message">Want to reject selected records?</string>
    <string name="approve_message">Want to approve selected records?</string>
    <string name="cancel">Cancel</string>
    <string name="approve_records_alert">Approve Records</string>
    <string name="approve_all_records_alert">Approve All Records</string>
    <string name="reject_all_records_alert">Reject All Records</string>
    <string name="approve_all">Approve All</string>
    <string name="reject_all">Reject All</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="submitting_rejected_records_message">Please wait, submitting rejected records.</string>
    <string name="submitting_approved_records_message">Please wait, submitting approved records.</string>
    <string name="review_records">Review Records</string>
    <string name="fetching_records">Please wait, fetching records…</string>
    <string name="answer">Answer</string>
    <string name="attention">Attention!</string>
    <string name="reject_records_warning">Are you sure? Your will lose all your changes!</string>
    <string name="submitting_records_message">Please wait, submitting records.</string>
    <string name="your_account_is_locked_due_to_wrong_submission_of_records">Your manager account has been locked due to incorrect record submission.</string>
    <string name="pending_head">Pending (%d)</string>
    <string name="approved_head">Approved (%d)</string>
    <string name="rejected_head">Rejected (%d)</string>
    <string name="submit_records">Submit Records</string>
    <string name="submit_alert_records_message">Want to submit reviewed records?</string>
    <string name="submit">Submit</string>
    <string name="incorrect_records">Incorrect Records</string>
    <string name="record_id_text">Record ID: %d</string>
    <string name="options">Options</string>
    <string name="back">Back</string>
    <string name="reload">Reload</string>
    <string name="template">Template</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="boxes">%d Boxes</string>
    <string name="prev">Prev</string>
    <string name="incorrect_sniffing_warning">Please pay attention to your work since you\'re working incorrectly. We\'re suspending you for the next thirty seconds.</string>
    <string name="warning">WARNING</string>
    <string name="record_info">Record Info</string>
    <string name="video_id">Video ID:</string>
    <string name="recorded_by">Recorded By:</string>
    <string name="video_source_id">Video Source Id:</string>
    <string name="date_of_recording">Date of Recording:</string>
    <string name="judgement_priority">Judgement Priority:</string>
    <string name="annotation_priority">Annotation Priority:</string>
    <string name="review_priority">Review Priority:</string>
    <string name="surge_meta_tag">Surge MetaTag:</string>
    <string name="city_priority">City Priority:</string>
</resources>