<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_review"
        android:orientation="vertical"
        tools:context=".recordsgallery.ReviewActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/review_screen"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/appToolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/dashboard"
                app:theme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@color/text_dark" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/recordsTypeTl"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/dashboard"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/colorPrimary"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/colorPrimary"
                app:tabTextColor="@color/colorAccent">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/pendingTab"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/pending_head" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/approvedTab"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/approved_head" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/rejectedTab"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/rejected_head" />

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:id="@+id/actionItemContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/gridSelectorIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    app:srcCompat="@drawable/bg_grid_selector" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/hideOverlayIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_invisible" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/contrastIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    app:srcCompat="@drawable/ic_review_contrast" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/selectedRecordsCountTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/text_light"
                        android:visibility="visible"
                        tools:text="34/65"
                        tools:visibility="gone" />

                    <SeekBar
                        android:id="@+id/contrastSlider"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_marginStart="32dp"
                        android:background="@drawable/bg_cont_slider"
                        android:max="99"
                        android:paddingStart="20dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="12dp"
                        android:progress="50"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recordsView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/actionItemContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actionItemContainer"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/list_item_record_row"
                tools:spanCount="2" />

            <LinearLayout
                android:id="@+id/noRecordsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actionItemContainer"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/ic_not_found" />

                <TextView
                    android:id="@+id/errorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/no_records"
                    android:textColor="@color/text_dark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/judgmentContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/rejectBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_action_buttons"
                    android:elevation="6dp"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/reject"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/reject" />

                <Button
                    android:id="@+id/approveFb"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/bg_action_buttons"
                    android:elevation="6dp"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/approve"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/approve" />
            </LinearLayout>

            <Button
                android:id="@+id/submitFb"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/bg_action_buttons"
                android:elevation="6dp"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/submit_records"
                android:textColor="@color/white"
                android:visibility="gone"
                app:backgroundTint="@color/approve"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>